# Subtitle-Translate

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  check.sh  ci.sh  pyproject.toml  test-requirements.in  test-requirements.txt
.github/workflows/: autodeps.yml
src/subtitle_translate/: __init__.py  extricate.py  main.py  subtitle_parser.py  translate.py
tests/: test_extricate.py  test_init.py  test_subtitle_parser.py
